add: unitTests for item