@@ -80,11 +80,6 @@
 
 
 
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-junit-jupiter</artifactId>
-            <scope>test</scope>
-        </dependency>
 
         <dependency>
             <groupId>org.jsoup</groupId>
@@ -116,6 +111,7 @@
 
                 <configuration>
                     <release>21</release>
+
 
                     <annotationProcessorPaths>
 
@@ -157,6 +153,18 @@
 
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+
+                <configuration>
+                    <argLine>
+                        -XX:+EnableDynamicAgentLoading
+                    </argLine>
+                </configuration>
+
+            </plugin>
+
 
         </plugins>
     </build>
